案例页面内部平滑滚动，但是遗留两个问题待解决
1.监听鼠标滚动时间，导航栏样式跟随交互
2.其它页面通过主导航跳至案例页面，直接滚动至目标锚点处

--- a/src/less/lib-public.less
+++ b/src/less/lib-public.less
@@ -186,12 +186,14 @@
 #sideBar {
   position:fixed;
   .mt(-100px);
+  z-index:99999;
   height:200px;
   top:50%;
   right:0;
   width:50px;
   ul > li {
     .mb(2px);
+    .f14;
     background:rgba(36, 36, 36, .8);
     cursor:pointer;
     em {
