--- a/src/css/lib-public.css
+++ b/src/css/lib-public.css
@@ -233,6 +233,7 @@ body {
 .response-img {
   max-width: 100%;
   display: block;
+  margin: 0 auto 0 auto;
 }
 .icon-fb:before {
   background: url("../img/icon-1.png") no-repeat -288px -150px;
@@ -338,6 +339,9 @@ body {
 }
 #link-defalt .main-nav:hover {
   background-color: #ff0000;
+}
+.f10 {
+  font-size: 10px;
 }
 .f12 {
   font-size: 12px;
@@ -656,6 +660,7 @@ body {
 #sideBar {
   position: fixed;
   margin-top: -100px;
+  z-index: 99999;
   height: 200px;
   top: 50%;
   right: 0;
@@ -663,6 +668,7 @@ body {
 }
 #sideBar ul > li {
   margin-bottom: 2px;
+  font-size: 14px;
   background: rgba(36, 36, 36, 0.8);
   cursor: pointer;
 }
