--- a/src/css/pages/index.css
+++ b/src/css/pages/index.css
@@ -233,6 +233,7 @@ body {
 .response-img {
   max-width: 100%;
   display: block;
+  margin: 0 auto 0 auto;
 }
 .icon-fb:before {
   background: url("../img/icon-1.png") no-repeat -288px -150px;
@@ -338,6 +339,9 @@ body {
 }
 #link-defalt .main-nav:hover {
   background-color: #ff0000;
+}
+.f10 {
+  font-size: 10px;
 }
 .f12 {
   font-size: 12px;
