--- a/src/less/lib-common.less
+++ b/src/less/lib-common.less
@@ -24,6 +24,7 @@ body {
 .response-img {
   max-width:100%;
   .block;
+  .m-auto(0,0);
 }
 
 .icon-fb:before {
@@ -262,6 +263,10 @@ body {
   font-family:@font-family;
   font-style:normal;
   font-weight:@weight;
+}
+
+.f10 {
+  font-size:10px
 }
 
 .f12 {
