--- a/src/less/pages/cases.less
+++ b/src/less/pages/cases.less
@@ -83,3 +83,45 @@
     }
   }
 }
+
+//左侧导航
+#menuBar {
+  .pos-f;
+  z-index:999;
+  .mt(-260px);
+  box-sizing:border-box;
+  padding:20px 0;
+  left:0;
+  top:50%;
+  width:110px;
+  height:520px;
+  background-color:rgba(61, 61, 61, .95);
+  li {
+    .f14;
+    color:@white;
+    height:34px;
+    padding:7px 0 7px 14px;
+    line-height:1.4;
+    cursor:pointer;
+    small {
+      .block;
+      .f10;
+    }
+    &.current {
+      .pos-r;
+      width:110px;
+      background-color:rgba(211, 51, 49, 1);
+      &:after {
+        .after(16px, 6px);
+        background:url("@{icon-3}") no-repeat  -34px 0;
+        top:auto;
+        right:0;
+        bottom:-6px;
+        left:auto;
+      }
+    }
+  }
+}
+
+
+
