做完“AboutUS”前三块
但是出现冲突，“service“页面出现版本丢失

--- a/src/css/pages/aboutUs.css
+++ b/src/css/pages/aboutUs.css
@@ -431,289 +431,373 @@ body {
 .wrap .more:hover:after {
   background: url("../img/icon-1.png") no-repeat -343px 0;
 }
-#header {
-  zoom: 1;
-  width: 100%;
-  overflow: visible;
-  background-color: #ffffff;
-  z-index: 9999;
-  top: 0;
+.aboutUs-tabBar {
+  height: 60px;
+  line-height: 60px;
+  padding: 40px 0;
+  border-bottom: 1px solid #cccccc;
 }
-#header:before {
-  content: '';
-  display: block;
+.aboutUs-tabBar .aboutCurrent {
+  width: 500px;
 }
-#header:after {
-  content: '';
-  display: table;
-  clear: both;
-}
-#header #logo {
+.aboutUs-tabBar .aboutCurrent > h4 {
   float: left;
-  padding-left: 35px;
-  padding-top: 15px;
+  font-size: 40px;
+  font-weight: 700;
 }
-#header #logo a {
-  display: block;
-}
-#header #logo a ins {
-  text-indent: -99999px;
-  display: inline-block;
-}
-#header #navBar {
-  float: right;
-  position: relative;
-  text-align: center;
-  zoom: 1;
-  height: 100px;
-  line-height: 100px;
-}
-#header #navBar dl,
-#header #navBar li {
-  float: left;
-  margin-right: 0;
-}
-#header #navBar:before {
-  content: '';
-  display: block;
-}
-#header #navBar:after {
-  content: '';
-  display: table;
-  clear: both;
-}
-#header #navBar .nav > li {
-  position: relative;
-  text-align: center;
-  margin-right: 5px;
-}
-#header #navBar .nav > li a {
-  color: #333333;
-  display: block;
-}
-#header #navBar .nav > li h3 {
-  font-size: 16px;
-  font-family: "微软雅黑";
-  font-style: normal;
-  font-weight: normal;
-}
-#header #navBar .nav > li h3 a {
-  position: relative;
-  width: 120px;
-}
-#header #navBar .nav > li h3 a:after {
-  -webkit-transition: width 0.3s ease-out, left 0.3s ease-out, border-color 0.3s ease-out;
-  transition: width 0.3s ease-out, left 0.3s ease-out, border-color 0.3s ease-out;
-  position: absolute;
-  content: "";
-  margin-top: -18px;
-  margin-left: 0;
-  top: 50%;
-  left: 50%;
-  width: 0;
-  height: 36px;
-  height: 10px;
-  top: auto;
-  bottom: -10px;
-  border-top: 4px solid #d33331;
-  padding-bottom: inherit;
-}
-#header #navBar .nav > li h3.active a:after,
-#header #navBar .nav > li h3:hover a:after {
-  width: 122px;
-  left: -3px;
-}
-#header #navBar .nav > li.double h3:hover a:after {
-  width: 242px;
-  left: -60px;
-}
-#header #navBar .nav > li.double .sub {
-  width: 240px;
-  left: -50%;
-}
-#header #navBar .sub {
-  position: absolute;
-  text-align: center;
-  border: 1px solid #d7d7d7;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  display: none;
-  left: -3px;
-  top: 100px;
-  z-index: 1;
-  width: 120px;
-  background: #ffffff;
-}
-#header #navBar .sub li {
-  margin-bottom: -1px;
-  width: 120px;
-  box-sizing: border-box;
-}
-#header #navBar .sub li a {
-  border-bottom: 1px solid #d7d7d7;
-  line-height: 30px;
-  padding: 8px;
-}
-#header #navBar .sub li a:hover {
-  padding-left: 5px;
-  margin-left: -1px;
-  border-left: 3px solid #da271b;
-  background: #f8f8f8;
-}
-#main-footer {
-  padding: 50px 0;
-  color: #ffffff;
-  background: #3d3d3d;
-  height: auto;
-  overflow: hidden;
-}
-#main-footer .btm-nav {
-  border-bottom: 1px solid #ffffff;
-  margin: 0 auto 0 auto;
-  width: 1170px;
-  height: auto;
-  overflow: hidden;
-  zoom: 1;
-  padding-bottom: 50px;
-}
-#main-footer .btm-nav dl,
-#main-footer .btm-nav li {
-  float: left;
-  margin-right: 212px;
-}
-#main-footer .btm-nav:before {
-  content: '';
-  display: block;
-}
-#main-footer .btm-nav:after {
-  content: '';
-  display: table;
-  clear: both;
-}
-#main-footer .btm-nav dl:last-of-type {
-  margin-right: 0;
-}
-#main-footer .btm-nav dt {
-  border-bottom: 1px solid #ffffff;
-  margin-bottom: 10px;
-  font-size: 16px;
-  padding: 10px 0;
-}
-#main-footer .btm-nav dd {
-  line-height: 30px;
-}
-#main-footer .btm-nav dd a {
-  color: #ffffff;
-}
-#main-footer .btm-nav dd a:hover {
-  font-weight: 600;
-  color: #ffffff;
-}
-#main-footer .btm-contact {
-  text-align: center;
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-#main-footer .btm-contact li {
-  position: relative;
-  margin-left: 30px;
-  margin-right: 30px;
-  display: inline-block;
-}
-#main-footer .btm-contact li a {
-  padding-left: 30px;
-  color: #ffffff;
-}
-#main-footer .btm-contact li a:hover {
-  font-weight: normal;
+.aboutUs-tabBar .aboutCurrent > h4 i {
   color: #d33331;
 }
-#main-footer .btm-contact li a:before {
-  position: absolute;
-  content: "";
-  width: 26px;
-  height: 26px;
-  left: 0;
-  top: 0;
-}
-#main-footer .btm-contact li a.icon-fb:before {
-  left: -25px;
-  width: 48px;
-}
-#main-footer .btm-contact li a.icon-wechat:before {
-  left: -5px;
-  width: 30px;
-}
-#main-footer .btm-contact li a.icon-fb:hover:before {
-  background: url("../img/icon-1.png") no-repeat -288px -122px;
-}
-#main-footer .btm-contact li a.icon-qq:hover:before {
-  background: url("../img/icon-1.png") no-repeat -285px -202px;
-}
-#main-footer .btm-contact li a.icon-tel:hover:before {
-  background: url("../img/icon-1.png") no-repeat -233px -202px;
-}
-#main-footer .btm-contact li a.icon-wechat:hover:before {
-  background: url("../img/icon-1.png") no-repeat -311px -178px;
-}
-#main-footer .btm-copyright {
-  font-size: 14px;
-}
-#sideBar {
-  position: fixed;
-  margin-top: -100px;
-  z-index: 99999;
-  height: 200px;
-  top: 50%;
-  right: 0;
-  width: 50px;
-}
-#sideBar ul > li {
-  margin-bottom: 2px;
-  font-size: 14px;
-  background: rgba(36, 36, 36, 0.8);
-  cursor: pointer;
-}
-#sideBar ul > li em {
+.aboutUs-tabBar .aboutCurrent > span {
+  float: left;
   position: relative;
-  display: block;
-  width: 50px;
-  height: 50px;
+  padding: 9px 0 9px 30px;
+  line-height: 20px;
 }
-#sideBar ul > li em.icon-qq:before,
-#sideBar ul > li em.icon-tel:before {
+.aboutUs-tabBar .aboutCurrent > span:before {
   position: absolute;
   content: "";
-  margin-top: -13px;
-  margin-left: -13px;
+  margin-top: -2px;
+  margin-left: -2px;
   top: 50%;
   left: 50%;
-  width: 26px;
-  height: 26px;
-}
-#sideBar ul > li em.icon-wechat:before {
-  position: absolute;
-  content: "";
-  margin-top: -13px;
-  margin-left: -15px;
-  top: 50%;
-  left: 50%;
-  width: 30px;
-  height: 26px;
-}
-#sideBar ul > li em.icon-backtop:before {
-  position: absolute;
-  content: "";
-  margin-top: -9px;
-  margin-left: -14px;
-  top: 50%;
-  left: 50%;
-  width: 28px;
-  height: 18px;
-}
-#sideBar ul > li span {
-  display: none;
-}
-#sideBar ul > li:hover {
+  width: 4px;
+  height: 4px;
   background-color: #d33331;
+  left: 15px;
+}
+.aboutUs-tabBar .aboutCurrent > span b {
+  font-size: 18px;
+}
+.aboutUs-tabBar .aboutCurrent > span strong {
+  font-size: 12px;
+  display: block;
+  font-weight: normal;
+}
+.aboutUs-tabBar .tab {
+  zoom: 1;
+  padding: 14px 0;
+  width: 400px;
+  height: auto;
+  overflow: hidden;
+}
+.aboutUs-tabBar .tab dl,
+.aboutUs-tabBar .tab li {
+  float: left;
+  margin-right: 0;
+}
+.aboutUs-tabBar .tab:before {
+  content: '';
+  display: block;
+}
+.aboutUs-tabBar .tab:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.aboutUs-tabBar .tab li {
+  margin-left: 16px;
+  height: 32px;
+  line-height: 32px;
+  padding: 0 10px;
+  background-color: #333333;
+}
+.aboutUs-tabBar .tab li > a {
+  display: block;
+  color: #ffffff;
+}
+.aboutUs-tabBar .tab li.active {
+  background-color: #d33331;
+}
+.aboutUs-content {
+  padding-top: 30px;
+  padding-bottom: 80px;
+  height: auto;
+  overflow: hidden;
+}
+.aboutUs-content .title {
+  padding: 50px 0;
+}
+.aboutUs-content .title > figcaption:first-child {
+  width: 380px;
+  margin: 0 auto 0 auto;
+}
+.aboutUs-content .title > figcaption:first-child > h3 {
+  float: left;
+  font-size: 44px;
+  margin-right: 10px;
+  display: inline-block;
+}
+.aboutUs-content .title > figcaption:first-child > h3 + span {
+  display: inline-block;
+  line-height: 22px;
+}
+.aboutUs-content .title > figcaption:first-child > h3 + span sup {
+  font-size: 10px;
+  display: block;
+  margin-top: 5px;
+  width: 50px;
+  padding: 0 5px;
+  background-color: #d33331;
+  color: #ffffff;
+}
+.aboutUs-content .title > figcaption:first-child:not(.block) + p {
+  margin: 30px auto 30px auto;
+  text-align: center;
+}
+.aboutUs-content .title ~ p {
+  text-indent: 2em;
+  padding-bottom: 15px;
+}
+.aboutUs-content strong.tip {
+  font-size: 14px;
+  position: relative;
+  line-height: 22px;
+  display: inline-block;
+  padding: 0 5px;
+  background-color: #333333;
+  color: #ffffff;
+}
+.aboutUs-content strong.tip:after {
+  content: "";
+  position: absolute;
+  right: -22px;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-top: 22px solid #333333;
+  border-right: 22px solid transparent;
+}
+.aboutUs-content.grid-bg {
+  background: url("../img/bground/gridBg.png") repeat #f8f8f8;
+}
+.core-business {
+  zoom: 1;
+}
+.core-business dl,
+.core-business li {
+  float: left;
+  margin-right: 0;
+}
+.core-business:before {
+  content: '';
+  display: block;
+}
+.core-business:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.core-business li {
+  text-align: center;
+  width: 25%;
+  box-sizing: border-box;
+  padding: 0 20px;
+}
+.core-business li > label:only-of-type {
+  font-size: 18px;
+  display: block;
+  position: relative;
+  padding: 15px 0;
+  font-weight: 600;
+}
+.core-business li:before {
+  content: "";
+  display: block;
+  width: 142px;
+  height: 142px;
+  margin: 0 auto 20px auto;
+  background-image: url("../img/icon-4.png");
+}
+.core-business li:nth-of-type(1):before {
+  background-position: -432px 0;
+}
+.core-business li:nth-of-type(2):before {
+  background-position: -144px 0;
+}
+.core-business li:nth-of-type(3):before {
+  background-position: 0 0;
+}
+.core-business li:nth-of-type(4):before {
+  background-position: -288px 0;
+}
+.columns-2 {
+  padding: 80px 0;
+  zoom: 1;
+}
+.columns-2:before {
+  content: '';
+  display: block;
+}
+.columns-2:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.columns-2 > .container > .fl,
+.columns-2 > .container > .fr {
+  width: 50%;
+}
+.columns-2 > .container > .fl .title,
+.columns-2 > .container > .fr .title {
+  margin-top: 60px;
+}
+.columns-2 > .container > .fl .title p:last-of-type,
+.columns-2 > .container > .fr .title p:last-of-type {
+  padding-left: 110px;
+  padding-top: 30px;
+}
+.columns-2 .imgBox > img:only-child {
+  display: block;
+  margin: 0 auto 0 auto;
+}
+.description-text {
+  padding: 120px 0 120px 0;
+  height: auto;
+  overflow: hidden;
+}
+.description-text .box > label,
+.description-text .box > h3,
+.description-text .box > .text {
+  display: table-cell;
+  vertical-align: middle;
+}
+.description-text .box > label {
+  height: 46px;
+}
+.description-text .box > label i {
+  font-size: 10px;
+  background-color: #d33331;
+  color: #ffffff;
+  padding: 3px;
+  display: block;
+}
+.description-text .box > h3 {
+  border-right: 1px solid #d7d7d7;
+  text-align: center;
+  height: 46px;
+  line-height: 46px;
+  font-size: 44px;
+  width: 120px;
+}
+.description-text .box > .text {
+  padding-left: 20px;
+}
+.ourCulture-table {
+  padding: 0 0 130px 0;
+  height: auto;
+  overflow: hidden;
+}
+.ourCulture-table table td {
+  color: #ffffff;
+}
+.ourCulture-table table td img:only-child {
+  display: block;
+}
+.ourCulture-table table td section:only-child {
+  padding: 0 15px;
+}
+.ourCulture-table table td section:only-child label {
+  font-size: 18px;
+}
+.ourCulture-table table td section:only-child p {
+  padding: 5px 0;
+  font-size: 14px;
+}
+.ourCulture-table table tr:first-of-type td:nth-of-type(2) {
+  background-color: #5e5e5e;
+}
+.ourCulture-table table tr:first-of-type td:nth-of-type(4) {
+  background-color: #ad9d90;
+}
+.ourCulture-table table tr:first-of-type td:nth-of-type(6) {
+  background-color: #afafaf;
+}
+.ourCulture-table table tr:first-of-type + tr td:nth-of-type(1) {
+  background-color: #84786e;
+}
+.ourCulture-table table tr:first-of-type + tr td:nth-of-type(3) {
+  background-color: #8e8e8e;
+}
+.ourCulture-table table tr:first-of-type + tr td:nth-of-type(5) {
+  background-color: #495c60;
+}
+.development-timeline {
+  padding-bottom: 160px;
+  height: auto;
+  overflow: hidden;
+}
+.development-timeline .box {
+  overflow: visible;
+  padding-top: 120px;
+}
+.development-timeline .box > time,
+.development-timeline .box > .line,
+.development-timeline .box > .shop-view {
+  display: table-cell;
+  vertical-align: middle;
+}
+.development-timeline .box > time li img,
+.development-timeline .box > .line li img,
+.development-timeline .box > .shop-view li img {
+  display: block;
+}
+.development-timeline .box > time {
+  font-size: 24px;
+  width: 120px;
+  text-transform: uppercase;
+}
+.development-timeline .box > .line {
+  position: relative;
+  width: 105px;
+}
+.development-timeline .box > .line > em {
+  display: block;
+  margin: 0 auto 0 auto;
+  height: 200px;
+  width: 5px;
+  background: #ccc;
+}
+.development-timeline .box > .line > em:before,
+.development-timeline .box > .line > em:after {
+  position: absolute;
+  content: "";
+  margin-top: -6px;
+  margin-left: -6px;
+  top: 50%;
+  left: 50%;
+  width: 12px;
+  height: 12px;
+  background: inherit;
+  border-radius: 50%;
+}
+.development-timeline .box > .line > em:before {
+  top: -12px;
+}
+.development-timeline .box > .line > em:after {
+  top: auto;
+  bottom: -18px;
+}
+.development-timeline .box > .shop-view {
+  zoom: 1;
+}
+.development-timeline .box > .shop-view dl,
+.development-timeline .box > .shop-view li {
+  float: left;
+  margin-right: 22px;
+}
+.development-timeline .box > .shop-view:before {
+  content: '';
+  display: block;
+}
+.development-timeline .box > .shop-view:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.development-timeline .box > .shop-view li:last-of-type {
+  margin-right: 0;
+}
+.development-timeline .box > .shop-view > p:last-of-type {
+  padding-top: 15px;
 }
