--- a/src/less/lib-common.less
+++ b/src/less/lib-common.less
@@ -20,6 +20,8 @@ body {
 @icon-2:"../img/icon-2.png";
 @icon-3:"../img/icon-3.png";
 @icon-4:"../img/icon-4.png";
+@icon-5:"../img/icon-5.png";
+@icon-6:"../img/icon-6.png";
 
 .response-img {
   max-width:100%;
