--- a/src/less/lib-reset.less
+++ b/src/less/lib-reset.less
@@ -16,7 +16,7 @@ form, fieldset, legend, button, input, textarea,
 
 th, td,
   /* table elements 表格元素 */
-
+sub, sup,
 article, aside, canvas, details, embed, figure, figcaption, footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video
   /*html5新元素*/
 
