--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,8 +1,10 @@
 /* Import Less files */
+
+//重置Browser API
 @import "lib-reset";
 
-/* Import lib-rem.less if supportREM opened. */
-
+//公共类
+@import "lib-public";
 
 //首页
 @import "pages/index";
@@ -12,4 +14,7 @@
 
 //服务项目
 @import "pages/cases";
+
+//服务项目
+@import "pages/aboutUs";
 
