--- a/src/css/pages/index.css
+++ b/src/css/pages/index.css
@@ -29,6 +29,8 @@ input,
 textarea,
 th,
 td,
+sub,
+sup,
 article,
 aside,
 canvas,
@@ -906,9 +908,7 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-color: #412106;
-  /* 设置渐变的背景，按对角线渐变 */
   background-image: -webkit-linear-gradient(-45deg, rgba(0, 0, 0, 0.6) 30%, #f9cf93 50%, rgba(0, 0, 0, 0.6) 70%);
-  /* 设置背景为混合模式下的强光模式 */
   background-blend-mode: hard-light;
   background-size: 240%;
   -webkit-animation: shine 3s infinite;
