--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,7 +1,9 @@
 /* Import Less files */
+
+//重置Browser API
 @import "lib-reset";
 
-/* Import lib-rem.less if supportREM opened. */
+//公共类
 @import "lib-public";
 
 //首页
@@ -12,4 +14,7 @@
 
 //服务项目
 @import "pages/cases";
+
+//服务项目
+@import "pages/aboutUs";
 
