--- a/src/less/pages/index.less
+++ b/src/less/pages/index.less
@@ -57,7 +57,7 @@
   .list-inline(left, 0);
   .service-list {
     .pos-r;
-    .wrapper(40px, 40px);
+    .wrapper(40px,40px);
     &:before {
       .service-line(80px);
       left:0
@@ -385,7 +385,7 @@
 
 // 关于我们
 #aboutUs {
-  background-color:rgba(203, 183, 162, 1);
+  background-color: rgba(203, 183, 162, 1);
   & > .box {
     .pos-r;
     .block;
@@ -413,9 +413,9 @@
       -webkit-background-clip:text;
       -webkit-text-fill-color:transparent;
       background-color:#412106;
-      //设置渐变的背景，按对角线渐变
+      /* 设置渐变的背景，按对角线渐变 */
       background-image:-webkit-linear-gradient(-45deg, rgba(0, 0, 0, 0.6) 30%, #f9cf93 50%, rgba(0, 0, 0, 0.6) 70%);
-      // 设置背景为混合模式下的强光模式
+      /* 设置背景为混合模式下的强光模式 */
       background-blend-mode:hard-light;
       background-size:240%;
       -webkit-animation:shine 3s infinite;
