--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,9 +1,7 @@
 /* Import Less files */
-
-//重置Browser API
 @import "lib-reset";
 
-//公共类
+/* Import lib-rem.less if supportREM opened. */
 @import "lib-public";
 
 //首页
@@ -14,7 +12,4 @@
 
 //服务项目
 @import "pages/cases";
-
-//服务项目
-@import "pages/aboutUs";
 
