--- a/src/css/pages/cases.css
+++ b/src/css/pages/cases.css
@@ -29,8 +29,6 @@ input,
 textarea,
 th,
 td,
-sub,
-sup,
 article,
 aside,
 canvas,
@@ -220,9 +218,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -moz-font-feature-settings: "liga" on;
 }
-::selection {
-  color: darkgrey;
-}
 body {
   font-size: 16px;
   font-family: "微软雅黑";
@@ -235,8 +230,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -moz-font-feature-settings: "liga" on;
 }
-/* VARIABLE*/
-/*ICON*/
 .response-img {
   max-width: 100%;
   display: block;
@@ -269,7 +262,6 @@ body {
 .icon-E:before {
   background: url("../img/icon-1.png") no-repeat -116px -152px;
 }
-/* LAYOUT  STYLE*/
 .container {
   margin: 0 auto 0 auto;
   width: 1170px;
@@ -334,7 +326,6 @@ body {
   width: 100%;
   display: table;
 }
-/*LINK  STYLE*/
 #link-defalt {
   color: #00b9d1;
   display: block;
@@ -349,7 +340,6 @@ body {
 #link-defalt .main-nav:hover {
   background-color: #ff0000;
 }
-/*TEXT STYLE*/
 .f10 {
   font-size: 10px;
 }
@@ -371,20 +361,11 @@ body {
 .f24 {
   font-size: 24px;
 }
-.f26 {
-  font-size: 26px;
-}
-.f28 {
-  font-size: 28px;
-}
 .f32 {
   font-size: 32px;
 }
-/* FONT COLOR*/
-/*SNIPPET*/
 .wrap {
-  padding: 120px 0 120px 0;
-  overflow: hidden;
+  padding: 120px 0;
   height: auto;
 }
 .wrap .title figcaption h3 {
@@ -449,12 +430,12 @@ body {
   background: url("../img/icon-1.png") no-repeat -343px 0;
 }
 #cases {
-  padding: 20px 0 180px 0;
+  padding: 180px 0 180px 0;
   height: auto;
   overflow: hidden;
 }
 #cases .wrapper {
-  padding: 160px 0 20px 0;
+  padding: 0 0 160px 0;
   height: auto;
   overflow: hidden;
   position: relative;
@@ -470,7 +451,7 @@ body {
   height: 21px;
   background: url("../img/icon-3.png") no-repeat 0;
   top: auto;
-  bottom: 0;
+  bottom: 160px;
 }
 #cases .wrapper:last-of-type:after {
   display: none;
