--- a/src/less/lib-public.less
+++ b/src/less/lib-public.less
@@ -232,6 +232,17 @@
     &:hover {
       background-color:@red;
     }
+
+    .qrImg {
+      .pos-a;
+      width:118px;
+      height:118px;
+      right:-200px;
+      top:0;
+      img:only-child {
+        display:block;
+      }
+    }
   }
 }
 
